<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application Name -->
    <string name="app_name" translatable="false">TiCHU Counter</string>

    <!-- General Strings -->
    <string name="backbutton" translatable="false">Go back</string>

    <!-- Main Screen -->
    <string name="tichu" translatable="false">TiCHU</string>
    <string name="counter" translatable="false">Counter</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="settings">Settings</string>
    <string name="info_impressum" translatable="false">Info/ Impressum</string>

    <!-- Settings Screen -->
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="swiss_german">Swiss German</string>
    <string name="statistics">Statistics</string>
    <string name="decimals">Decimals</string>
    <string name="percents">Percents</string>
    <string name="light_mode" translatable="false">Light Mode</string>
    <string name="dark_mode" translatable="false">Dark Mode</string>
    <string name="screen_mode">Screen Mode</string>

    <!-- Scoreboard Screen -->
    <string name="scoreboard">Scoreboard</string>
    <string name="team">Team</string>
    <string name="score">Score</string>
    <string name="tichu_short" translatable="false">T</string>
    <string name="grand_tichu_short" translatable="false">GT</string>
    <string name="double_win_short">TW</string>
    <string name="grand_tichu">Grand Tichu</string>
    <string name="double_win">Team Win</string>
    <string name="bomb">Bomb</string>
    <string name="win">WiN!</string>
    <string name="team_names">Team Names</string>
    <string name="set">Set</string>
    <string name="round_score">Score:  %1$s</string>
    <string name="tichus" translatable="false">TiCHUs</string>
    <string-array name="scores" translatable="false">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
        <item>105</item>
        <item>110</item>
        <item>115</item>
        <item>120</item>
        <item>125</item>
        <item>-25</item>
        <item>-20</item>
        <item>-15</item>
        <item>-10</item>
        <item>-5</item>
    </string-array>

    <!-- Teamnames Dialog -->
    <string name="first_team">Team 1</string>
    <string name="second_team">Team 2</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="default_teamname_1">Me</string>
    <string name="default_teamname_2">You</string>

    <!-- Info/ Impressum Screen -->
    <string name="info">Info</string>
    <string name="impressum">Impressum</string>
    <string name="image_copyright">Copyright for the images of dragon, phoenix, dog and bambusbird is owned by Fata Morgana.\nPermission to use was granted for the purpose of this application only.\nImages do not fall under the software\'s OS license.</string>
    <string name="sourcecode_copyright">Source Code for this Application is published\nin the aforementioned repo under the\n GNU AGPLv3 Licence.</string>
    <string name="developer_email" translatable="false">devtronaut@hotmail.com</string>
    <string name="sourcecode_repository" translatable="false">android-tichu-counter\ndevtronaut/android-tichu-counter</string>
    <string name="developer_pseudonym" translatable="false">Devtronaut\ngithub.com/devtronaut</string>
    <string name="app_info">TiCHU Counter for Android Devices.\nKeep track of your current scores, pause and restore games at any time.\nForget about small, easy-to-lose and unsustainable pieces of paper!\n\nHave fun, enjoy the game!</string>
    <string name="error_tichu_conflict">You can\'t both win!</string>

    <!-- Load Game Screen -->
    <string name="finished">Finished</string>
    <string name="open">Open</string>
    <string name="teams">%1$s  vs.  %2$s</string>
    <string name="scores">%1$d  :  %2$d</string>
    <string name="delete_game">Delete Game</string>
    <string name="X" translatable="false">X</string>
    <string name="no_game_to_load">No Game to load!</string>
    <string name="gratulation">Congrats!</string>
    <string name="thanks">Thanks!</string>
    <string name="undo">Undo</string>
</resources>