<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/shape_dialog_teamnames"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/bonzai"
        android:text="@string/team_names"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_dialog_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bonzai"
            android:text="@string/first_team"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/et_dialog_name_team1"
            app:layout_constraintEnd_toEndOf="@+id/et_dialog_name_team1"
            app:layout_constraintStart_toStartOf="@+id/et_dialog_name_team1" />

        <EditText
            android:id="@+id/et_dialog_name_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/bonzai"
            android:hint="@string/default_teamname_1"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/et_dialog_name_team2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dialog_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bonzai"
            android:text="@string/second_team"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/et_dialog_name_team2"
            app:layout_constraintEnd_toEndOf="@+id/et_dialog_name_team2"
            app:layout_constraintStart_toStartOf="@+id/et_dialog_name_team2"
            app:layout_constraintTop_toBottomOf="@+id/et_dialog_name_team1" />

        <EditText
            android:id="@+id/et_dialog_name_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/bonzai"
            android:hint="@string/default_teamname_2"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_cancelmission"
            style="@style/tichu_dialog_button"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_save_teamnames"
            style="@style/tichu_dialog_button"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>