<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bonzai"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:text="@string/team_names" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_dialog_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bonzai"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:text="@string/first_team" />

        <EditText
            android:id="@+id/et_dialog_name_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bonzai"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/first_team" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bonzai"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:text="@string/second_team" />

        <EditText
            android:id="@+id/et_dialog_name_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bonzai"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/second_team" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_cancelmission"
            style="@style/tichu_dialog_button"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_save_teamnames"
            style="@style/tichu_dialog_button"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>