<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.activities.LoadGameActivity">

    <!-- Backbutton -->
    <ImageButton
        android:id="@+id/ib_backbutton"
        style="@style/backbutton"
        android:contentDescription="@string/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Screen Title -->
    <TextView
        android:id="@+id/tv_scoreboard_title"
        style="@style/title_text"
        android:text="@string/load_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_games"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/big_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_scoreboard_title" />

    <TextView
        android:id="@+id/tv_no_game"
        style="@style/bonzai_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_game_to_load"
        android:textSize="@dimen/h3"
        android:textColor="@color/gray"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>